--- a/index.html
+++ b/index.html
@@ -1,17 +1,22 @@
 <!DOCTYPE html>
 <html slang="en">
 <head>
-    <meta charset="UTF-8">
+    <title>W E L C O M E -- H O M E</title>
+    <meta charset="UTF-8"
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
     <meta name="author" content="Bruno Coimbra - https://github.com/0-l">
     <link href="./css/style.css" rel="stylesheet" type="text/css">
+    <link rel="icon" href="img/Waifus/19.png" sizes="16x16 32x32 48x48 64x64" type="image/vnd.microsoft.icon" />
+    <script src="script.js"></script>
+    <script type="text/javascript">var mascotPath = "img/Waifus/";</script>
+    <script type="text/javascript" src="js/mascots-control.js"></script>
+    <script type="text/javascript" src="js/jquery-2.1.1.min.js"></script>
+    <script type="text/javascript"src="js/mascots.js"></script>
     <title>~</title>
+
 </head>
 <body>
-    <div class="_search">
-        <input type="text" spellcheck="false" placeholder="search">
-        <ul class="search-engines"></ul>
-    </div>
+
     <div class="_nav">
         <section>
             <h1>General</h1>
@@ -100,15 +105,6 @@
 
         </section>
     </div>
-    <div class="clock">
-        <p class="day"></p>
-        <p class="mins"><span class="hour"></span></p>
-    </div>
-    <noscript>
-        <style>
-            .clock, .\5f search { display: none !important }
-        </style>
-    </noscript>
-    <script type="text/javascript" src="js/script.js"></script>
+
 </body>
 </html>
