--- a/index.html
+++ b/index.html
@@ -6,12 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
     <meta name="author" content="Bruno Coimbra - https://github.com/0-l">
     <link href="./css/style.css" rel="stylesheet" type="text/css">
-    <link rel="icon" href="img/Waifus/19.png" sizes="16x16 32x32 48x48 64x64" type="image/vnd.microsoft.icon" />
-    <script src="script.js"></script>
-    <script type="text/javascript">var mascotPath = "img/Waifus/";</script>
-    <script type="text/javascript" src="js/mascots-control.js"></script>
-    <script type="text/javascript" src="js/jquery-2.1.1.min.js"></script>
-    <script type="text/javascript"src="js/mascots.js"></script>
+    <link rel="icon" href="img/Waifus/9.png" sizes="16x16 32x32 48x48 64x64" type="image/vnd.microsoft.icon" />
     <title>~</title>
 
 </head>
@@ -105,6 +100,6 @@
 
         </section>
     </div>
-
+  <img src="img/Waifus/8.png" alt="Smiley face" class="mascot">
 </body>
 </html>
