--- a/index.html
+++ b/index.html
@@ -101,5 +101,7 @@
         </section>
     </div>
   <img src="img/Waifus/9.png" alt="Smiley face" class="mascot">
+  <img src="img/Waifus/1.gif" alt="Smiley face" class="mascot2">
+  <img src="img/Waifus/3.png" alt="Smiley face" class="mascot3">
 </body>
 </html>
