--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 
         </section>
     </div>
-  <img src="img/Waifus/1.gif" alt="Smiley face" class="mascot2">
+<li><a href="https://github.com/Girouette-Titor/" target="_blank"><img src="img/Waifus/1.gif" alt="Go to my page" class="mascot2"></a></li>
 
 </body>
 </html>
