--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
         </section>
     </div>
 <li><a href="https://github.com/Girouette-Titor/" target="_blank"><img src="img/Waifus/1.gif" alt="Go to my page" class="mascot2"></a></li>
-<audio  loop controls>
+<audio width: 100px;  loop controls>
       <source src="Drive Me Wild.mp3">
 </audio>
 </body>
