--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
         <li><a href="https://gbatemp.net/" target="_blank"><img border="0" alt="" src="Site Icons\GB.ico" width="16" height="16"> Gbatemp</a></li>
         <li><a href="https://kitsu.io/" target="_blank"><img border="0" alt="" src="Site Icons\Kitsu.ico" width="16" height="16"> Kitsu</a></li>
         <li><a href="https://docs.google.com/document/u/0/?usp=docs_web" target="_blank"><img border="0" alt="" src="Site Icons\Docs.png" width="16" height="16"> Google Docs</a></li>
-        <li><a href="https://distrowatch.com/" target="_blank"><img border="0" alt="" src="Site Icons\DW.ico" width="16" height="16"> Distrowatch</a></li>
+        <li><a href="https://www.freecodecamp.org" target="_blank"><img border="0" alt="" src="https://www.freecodecamp.org/favicon.ico" width="16" height="16"> CodeCamp</a></li>
         <li><a href="https://www.khanacademy.org/sat" target="_blank"><img border="0" alt="" src="Site Icons\KA.png" width="16" height="16"> Khan Academy</a></li>
-        <li><a href="https://www.paypal.com/myaccount/home" target="_blank"><img border="0" alt="" src="Site Icons\pp258.png" width="16" height="16"> Paypal</a></li>
+        <li><a href="https://www.codecademy.com/learn" target="_blank"><img border="0" alt="" src="https://www.codecademy.com/favicon.ico" width="16" height="16"> CodeAcademy</a></li>
         <li><a href="https://www.coinbase.com/dashboard" target="_blank"><img border="0" alt="" src="Site Icons\5dc7da0a6229ebd90118f2483d6722ea_icon.png" width="16" height="16"> Coinbase</a></li>
         <li><a href="https://cryptowatch.de/" target="_blank"><img border="0" alt="" src="Site Icons\Bitcoin-icon.png" width="16" height="16"> Bitcoin Price</a></li>
 
