--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
         <li><a href="https://cs.rin.ru/forum/viewforum.php?f=10" target="_blank"><img border="0" alt="" src="Site Icons\CS.ico" width="16" height="16"> CS.Rin.Ru</a></li>
 				<li><a href="http://kissanime.ru/" target="_blank"><img border="0" alt="" src="Site Icons\KS.png" width="16" height="16"> Kissanime</a></li>
 				<li><a href="http://kimcartoon.me/" target="_blank"><img border="0" alt="" src="Site Icons\KC.ico" width="16" height="16"> Kimcartoon</a></li>
-        <li><a href="https://nyaa.pantsu.cat/" target="_blank"><img border="0" alt="" src="Site Icons\Nya.png" width="16" height="16"> Nyaa</a></li>
+        <li><a href="http://192.168.1.23:8083/" target="_blank"><img border="0" alt="" src="www.icons101.com/icon_ico/id_73872/Calibre.ico" width="16" height="16"> Calibre-Server</a></li>
 				<li><a href="http://igg-games.com/" target="_blank"><img border="0" alt="" src="Site Icons\igg.jpg" width="16" height="16">  IGG-Games</a></li>
 
             </ul>
